--- a/formacoes/android/Agenda/app/src/main/res/values/strings.xml
+++ b/formacoes/android/Agenda/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">Agenda</string>
+  <string name="app_name" translatable="false">Agenda</string>
+  <string name="activity_list_students_title">Lista de Aluno</string>
+  <string name="activity_list_students_fab_description">Adicionar aluno</string>
+  <string name="activity_list_students_menu_remove">Remover</string>
+  <string name="activity_form_students_title_new">Novo aluno</string>
+  <string name="activity_form_students_title_edit">Edita aluno</string>
+  <string name="activity_form_students_hint_name">Nome</string>
+  <string name="activity_form_students_hint_phone">Telefone</string>
+  <string name="activity_form_students_hint_email">E-mail</string>
+  <string name="activity_form_students_menu_save">Salvar o aluno</string>
 </resources>
